--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="centrado">
         <h1>OMG! you will not believe me but...</h1>
-        <h1 id="excuse">My dog eat my homework</h1>
-        
+        <h1 class="excuse" id="excuse">My dog eat my homework</h1>
+        <button onclick="obtenerColor()">Cambiar Color</button>
     </div>
     
     <script src="js/codigo.js"></script>
